# AI-Research-Assistant

./: .gitignore  README.md  app.py  future_of_ai.txt  pyproject.toml
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
src/: research_assistant.py  research_response.py
